# copilot-python

./: .dockerignore  .env.example  .gitignore  .yamllint  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
.github/agents/: architect.md  devops.md  implementer.md  qa.md  sre.md
.github/instructions/: azure.instructions.md  github-actions.instructions.md  python.instructions.md  security.instructions.md  tests.instructions.md
.github/prompts/: bugfix.prompt.md  deploy-azure.prompt.md  feature.prompt.md  operational-review.prompt.md  test-plan.prompt.md
.github/workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  deploy-azure-container-apps.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-13-emm-logging-shipped.md
.squad/orchestration-log/: 2026-05-13T14-45-57Z-hudson.md  2026-05-13T14-45-57Z-ripley-review.md
infra/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
src/: main.py
src/copilot_python_app/: __init__.py  config.py  health.py  main.py  middleware.py  telemetry.py
src/emm_logging/: __init__.py  config.py  setup.py  utils.py
src/emm_settings/: __init__.py  dotenv.py  snapshot.py  sources.py
tests/: conftest.py  test_app_telemetry.py
tests/integration/: test_app.py
tests/test_emm_logging/: conftest.py  test_azure_handler.py  test_azure_sink.py  test_configure_logging.py  test_utils.py  (+7 more)
(+34 files in other folders)
