[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "copilot-python-app"
version = "0.1.0"
description = "Azure-ready FastAPI service scaffold optimized for GitHub Copilot workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Project maintainers" }]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "python-json-logger>=3.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
seq = [
  "requests>=2.32.0",
]
azure = [
  "azure-monitor-opentelemetry>=1.6.0",
]
dev = [
  "bandit>=1.7.10",
  "coverage[toml]>=7.6.0",
  "httpx>=0.27.0",
  "mypy>=1.13.0",
  "pip-audit>=2.7.3",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_python_app", "src/emm_logging"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=copilot_python_app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["copilot_python_app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

